# PythonDMCGUI

./: .gitignore  .vulture_allowlist.py  3 Axis Serration grind - contour mode.dmc  3 Axis Serration grind - partial retract.dmc  3 Axis Serration grind Vector mode move.dmc  3 Axis Serration grind.dmc  4 Axis Stainless grind - New startPtC and flat pass.dmc  4 Axis Stainless grind - New startPtC.dmc  4 Axis Stainless grind.dmc  4 axis stainless grind left side deltas.csv  4 axis stainless grind right side deltas.csv  4 axis stainless grind right side.csv  4 axis stainless grind variables right side.xlsx  4 axis stainless grind with heel toward worker.gcb  Demo layout.sln  MODE A testing arrays and values.csv  README.md  absolute and deltas for A and B with flipped values.csv  calculating lift formula.xlsx  contour nhon trung correct cts.csv  deltaB flipped and flipped mirrored.csv  deltaB neg first.csv  deltaC 0.xlsx  environment.yml  grind_deltas ABCD with 0.85 deg .5 edge left MODE A.csv  grind_deltas FLAT ABCD with 0.85 deg .5 edge left MODE A.csv  grind_deltas testing with 0.85 deg .5 edge left MODE A.csv  grind_deltas testing with 1.2 deg to 2.3 deg MODE B for 0.5 edge and 0.4 bevel ratio.csv  mockup_axes_setup.html  nhon trung serration arrays and variables STABLE.xlsx  nhon trung serration arrays.xlsx  pyproject.toml  serration machine arrays and variables at 7oclock position.xlsx  wheel jog mode for wheeler.dmc  ~$calculating lift formula.xlsx
.claude/: settings.local.json
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  (+3 more)
(+394 files in other folders)
