[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dmccodegui"
version = "0.1.0"
description = "Kivy GUI for Galil DMC controller with layered architecture"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "kivy>=2.2.0",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "ruff>=0.15",
  "vulture>=2.16",
]

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
dmccodegui = "dmccodegui.main:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = []

[tool.ruff.lint.per-file-ignores]
"src/dmccodegui/hmi/dmc_vars.py" = ["N"]
"src/dmccodegui/screens/flat_grind_widgets.py" = ["F401"]
"src/dmccodegui/screens/run.py" = ["F401"]
"src/dmccodegui/screens/parameters.py" = ["F401"]
"src/dmccodegui/screens/axes_setup.py" = ["F401"]
"src/dmccodegui/screens/__init__.py" = ["F401"]

[tool.ruff.lint.isort]
known-third-party = ["kivy", "matplotlib", "kivy_matplotlib_widget", "gclib"]

